@@ -1,3 +1,12 @@
+2001-11-09  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/decl.cpp (ProcessImportQualifiedName): Detect attempts to
+	import from the unnamed package.
+	* src/error.h:
+	* src/error.cpp (IMPORT_FROM_UNNAMED_PACKAGE): Add new error.
+	(UNKNOWN_ON_DEMAND_IMPORT): Rename from
+	UNKNOWN_QUALIFIED_NAME_BASE, bug 601, patch 228.
+
 2001-11-08  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/access.h (AccessString): Add, for easier error messages.
